# Cameras

./: .gitignore  CMakeLists.txt  README.md  rascunhoBoth.cpp  rascunhobothZed.cpp
Both/: main.cpp
Both/include/: utils.hpp
D435i/: binToJPG.cpp  main.cpp
Land of crushed hopes/: rascunho.cpp  rascunhoD435o.cpp  rascunho_listas.cpp
Land of crushed hopes/Zed/: captureAndParse.cpp  parse.cpp
ZED/: binToJPG_ZED2.cpp  captureAndParse.cpp  main.cpp  parse.cpp
ZED/include/: utils.hpp
include/: utilsParse.hpp
